# Hydra-Runtime

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
hydra/cli/: README.md  main.py
hydra/commands/: README.md  ask.py  config.py  init.py  memory.py  status.py  switch.py
hydra/config/: README.md  config.py
hydra/database/: README.md  db.py
hydra/models/: README.md  schemas.py
hydra/runtime/: README.md
hydra/runtime/checkpoints/: README.md  __init__.py  manager.py
hydra/runtime/compiler/: README.md  compiler.py
hydra/runtime/graph/: README.md  graph.py
hydra/runtime/memory/: README.md  store.py
hydra/runtime/plugins/: README.md  base.py
hydra/runtime/providers/: README.md  base.py  ollama.py
hydra/runtime/router/: README.md  router.py
hydra/runtime/session/: README.md  session.py
hydra/runtime/state/: README.md  state.py
hydra/runtime/workspace/: README.md  analyzer.py
hydra/utils/: README.md  helpers.py
tests/: README.md  test_placeholder.py
