[project]
name = "hydra-runtime"
version = "0.1.0"
description = "An AI Runtime that manages memory, context, routing, state, and workspaces."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.2",
    "sentence-transformers>=3.0.1",
    "faiss-cpu>=1.8.0.post1",
    "networkx>=3.3",
    "gitpython>=3.1.43",
    "httpx>=0.27.0",
    "orjson>=3.10.6",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "black>=24.4.2",
    "isort>=5.13.2",
    "mypy>=1.10.0",
]

[project.scripts]
hydra = "hydra.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hydra"]